[2025-12-09 10:50:40] Resultado guardado: 18oct.Pasaporte.png (476 chars, 8.04s, riesgo=bajo)
[2025-12-09 10:50:48] Resultado guardado: Agencia 5317-ID Folio 133663.jpg (547 chars, 7.13s, riesgo=bajo)
[2025-12-09 10:50:54] Resultado guardado: Agencia 4694-TX Folio 126754.jpg (610 chars, 6.71s, riesgo=bajo)
[2025-12-09 10:51:06] Resultado guardado: image (1).png (550 chars, 11.79s, riesgo=bajo)
[2025-12-09 11:53:29] Resultado guardado: 18oct.Pasaporte.png (11 chars, 6.96s, riesgo=medio)
[2025-12-09 11:53:34] Resultado guardado: Agencia 5317-ID Folio 133663.jpg (11 chars, 4.20s, riesgo=medio)
[2025-12-09 11:53:37] Resultado guardado: Agencia 4694-TX Folio 126754.jpg (11 chars, 3.68s, riesgo=medio)
[2025-12-09 11:53:42] Resultado guardado: image (1).png (11 chars, 4.64s, riesgo=medio)
[2025-12-09 12:31:24] Resultado guardado: 18oct.Pasaporte.png (759 chars, 13.69s, riesgo=bajo)
[2025-12-09 12:31:36] Resultado guardado: Agencia 5317-ID Folio 133663.jpg (549 chars, 12.10s, riesgo=bajo)
[2025-12-09 12:31:48] Resultado guardado: Agencia 4694-TX Folio 126754.jpg (567 chars, 12.04s, riesgo=bajo)
[2025-12-09 12:32:03] Resultado guardado: image (1).png (634 chars, 14.36s, riesgo=bajo)
[2025-12-09 13:19:19] Resultado guardado: 18oct.Pasaporte.png (11 chars, 5.31s, riesgo=medio)
[2025-12-09 13:19:24] Resultado guardado: Agencia 5317-ID Folio 133663.jpg (11 chars, 4.35s, riesgo=medio)
[2025-12-09 13:19:28] Resultado guardado: Agencia 4694-TX Folio 126754.jpg (11 chars, 4.03s, riesgo=medio)
[2025-12-09 13:19:33] Resultado guardado: image (1).png (11 chars, 5.14s, riesgo=medio)
[2025-12-09 13:20:18] Resultado guardado: 18oct.Pasaporte.png (611 chars, 18.00s, riesgo=bajo)
[2025-12-09 13:20:30] Resultado guardado: Agencia 5317-ID Folio 133663.jpg (546 chars, 12.56s, riesgo=bajo)
[2025-12-09 13:20:45] Resultado guardado: Agencia 4694-TX Folio 126754.jpg (540 chars, 14.78s, riesgo=bajo)
[2025-12-09 13:21:00] Resultado guardado: image (1).png (510 chars, 14.26s, riesgo=bajo)